--- a/style.css
+++ b/style.css
@@ -85,6 +85,9 @@ body {
 }
 
 @media only screen and (min-width: 768px) {
+  body {
+    padding: 0 20px;
+  }
   .header-nav {
     display: flex;
     align-items: center;
@@ -96,5 +99,45 @@ body {
   .nav-link {
     display: flex;
     align-items: center;
+  }
+
+  .main-content {
+    display: flex;
+    padding-top: 75px;
+  }
+
+  .about {
+    flex: 1;
+  }
+
+  .circle-container {
+    flex: 1;
+    position: relative;
+  }
+  .pink-circle {
+    background-color: rgba(247, 136, 167, 0.6);
+    width: 175px;
+    height: 175px;
+    border-radius: 50%;
+    position: absolute;
+    right: 75px;
+  }
+  .orange-circle {
+    background-color: rgba(247, 193, 162, 0.7);
+    width: 125px;
+    height: 125px;
+    border-radius: 50%;
+    position: absolute;
+    top: 125px;
+    right: 50px;
+  }
+  .purple-circle {
+    background-color: rgba(207, 130, 213, 0.6);
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: 75px;
+    right: 10px;
   }
 }
